Adicionado teste para initial state do Formulario

--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,12 @@
-<html><title>dimdim converter</title><body>abc</body></html>
+<html>
+	<head><title>dimdim converter</title></head>
+	<body>
+		<select class="from_currency">
+			<option value="USD">Dolar</option>
+		</select>
+		<input type="text" name="from_amount" caption="amount" value="1"/>
+		<select class="to_currency">
+			<option value="BRL">Real</option>
+		</select>
+	</body>
+</html>
