conftest, initial tornado tests ...

--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,6 @@
 		<select class="to_currency">
 			<option value="BRL">Real</option>
 		</select>
+		<div class="to_amount">1</div>
 	</body>
 </html>
